Fix overflow issue for action card.

--- a/Play-by-Play/Content/card.css
+++ b/Play-by-Play/Content/card.css
@@ -15,6 +15,7 @@ div.tacticCard {
 	position: relative;
     padding: 2px;
 	margin: 0 2px 2px 0;
+	overflow: hidden;
 }
 
 div.teamLogo {
